[gd_scene load_steps=14 format=3 uid="uid://ctg303dwyuuq4"]

[ext_resource type="Script" path="res://scenes/map/box.gd" id="1_2oqf2"]
[ext_resource type="Texture2D" uid="uid://b4xpqwgr0fqk3" path="res://assets/icons/Free-Skill-32x32-Icons-for-Cyberpunk-Game/1 Icons/5/Skillicon5_11.png" id="2_13qfw"]
[ext_resource type="Texture2D" uid="uid://cer4cgvirvl32" path="res://assets/map/SciFi_DungeonTileset16x16_0x72Like.png" id="2_it40b"]
[ext_resource type="Texture2D" uid="uid://c74uniq71addp" path="res://assets/icons/Free-Skill-32x32-Icons-for-Cyberpunk-Game/1 Icons/5/Skillicon5_22.png" id="3_5cfyf"]
[ext_resource type="AudioStream" uid="uid://bi2gse6i7joki" path="res://assets/Alien Escape!/Sonido Random.wav" id="4_xp4h1"]
[ext_resource type="Texture2D" uid="uid://bwg7eh1iut0u6" path="res://assets/icons/Free-Skill-32x32-Icons-for-Cyberpunk-Game/1 Icons/5/Skillicon5_10.png" id="5_b2w66"]
[ext_resource type="Texture2D" uid="uid://cv2np082tdl1v" path="res://assets/HUD/circulo1.png" id="5_qhl1l"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r3e77"]
size = Vector2(16, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6dtb4"]
size = Vector2(192, 192)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3bao6"]
size = Vector2(2048, 448)

[sub_resource type="Animation" id="Animation_oyx78"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Simbol:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1.5, 1.5)]
}

[sub_resource type="Animation" id="Animation_iueek"]
resource_name = "animation"
length = 0.6
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Simbol:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.5, 1.5)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_w23pw"]
_data = {
"RESET": SubResource("Animation_oyx78"),
"animation": SubResource("Animation_iueek")
}

[node name="Box" type="StaticBody2D"]
collision_layer = 7
collision_mask = 7
script = ExtResource("1_2oqf2")
heal_simbol = ExtResource("2_13qfw")
ammo_simbol = ExtResource("3_5cfyf")
sound = ExtResource("4_xp4h1")

[node name="Sprite2D" type="Sprite2D" parent="."]
y_sort_enabled = true
position = Vector2(32, 22)
scale = Vector2(4, 4)
texture = ExtResource("2_it40b")
region_enabled = true
region_rect = Rect2(192, 59, 16, 21)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(32, 32)
scale = Vector2(4, 4)
shape = SubResource("RectangleShape2D_r3e77")

[node name="Simbol" type="Sprite2D" parent="."]
position = Vector2(32, 43)
scale = Vector2(1.5, 1.5)
texture = ExtResource("5_b2w66")

[node name="ActivationArea" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="ActivationArea"]
position = Vector2(32, 32)
shape = SubResource("RectangleShape2D_6dtb4")

[node name="EffectArea" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="EffectArea"]
position = Vector2(32, 32)
shape = SubResource("RectangleShape2D_3bao6")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_w23pw")
}

[node name="ActivationProgressBar" type="TextureProgressBar" parent="."]
z_index = 10
y_sort_enabled = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = -19.0
offset_right = 24.0
offset_bottom = -3.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(3, 3)
max_value = 1.0
step = 0.01
fill_mode = 4
texture_progress = ExtResource("5_qhl1l")
metadata/_edit_use_anchors_ = true

[node name="ActivationTimer" type="Timer" parent="."]

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="despawn" type="Timer" parent="."]
wait_time = 50.0
one_shot = true
autostart = true

[connection signal="timeout" from="ActivationTimer" to="." method="_on_activation_timer_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="despawn" to="." method="_on_despawn_timeout"]
